# Battleship

./: .gitignore  CMakeLists.txt  README.md
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
_CPack_Packages/win64/NSIS/BattleShip-0.1.1-win64/lib/pkgconfig/: raylib.pc
source/app/: CMakeLists.txt  main.cpp
source/core/: CMakeLists.txt
source/core/include/: Board.h  Coordinate.h  Game.h  GameRules.h  HumanPlayer.h  Player.h  Ship.h
source/core/src/: AIPlayer.cpp  Board.cpp  Game.cpp  HumanPlayer.cpp  Player.cpp  Ship.cpp
source/render/: CMakeLists.txt
source/render/include/: GridRender.h  RenderUtils.h  ShipRender.h  VisualConfigs.h
source/render/src/: GridRender.cpp  RenderUtils.cpp  ShipRender.cpp
tests/: CMakeLists.txt  test_AIPlayer.cpp  test_Board.cpp  test_HumanPlayer.cpp  test_Ship.cpp  tests.cpp
